[tool.poetry]
name = "yolo-test"
version = "0.1.0"
description = ""
authors = ["Thomas Brockmeier <t.brockmeier@amsterdam.nl>"]
readme = "README.md"
packages = [{include = "yolo_test"}]

[tool.poetry.dependencies]
python = "^3.9"
ultralytics = "^8.0.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
